force-app/main/default/objects/Voice_Service_Reply__c/Voice_Service_Reply__c.object-meta.xml
<CustomObject>
    <label>Voice Service Reply</label>
    <nameField>
        <displayFormat>VSR-{00000}</displayFormat>
        <label>Voice Service Reply Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Voice Service Replies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>