force-app/main/default/objects/Voice_Service_Reply__c/fields/Answer_1__c.field-meta.xml
<CustomField>
    <fullName>Answer_1__c</fullName>
    <label>Answer 1</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>