force-app/main/default/objects/Voice_Service_Reply__c/fields/Answer_2__c.field-meta.xml
<CustomField>
    <fullName>Answer_2__c</fullName>
    <label>Answer 2</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>