force-app/main/default/objects/Voice_Service_Reply__c/fields/Feedback_At__c.field-meta.xml
<CustomField>
    <fullName>Feedback_At__c</fullName>
    <label>Feedback At</label>
    <type>DateTime</type>
</CustomField>