force-app/main/default/objects/Voice_Service_Reply__c/fields/Feedback_By__c.field-meta.xml
<CustomField>
    <fullName>Feedback_By__c</fullName>
    <label>Feedback By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>VoiceServiceReplyFeedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>