force-app/main/default/objects/Voice_Service_Reply__c/fields/Feedback_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Reasons__c</fullName>
    <label>Feedback Reasons</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>