force-app/main/default/objects/Voice_Service_Reply__c/fields/Feedback_Status__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Status__c</fullName>
    <label>Feedback Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UP</fullName>
                <label>Thumbs Up</label>
            </value>
            <value>
                <fullName>DOWN</fullName>
                <label>Thumbs Down</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>