force-app/main/default/objects/Voice_Service_Reply__c/fields/Search_Query__c.field-meta.xml
<CustomField>
    <fullName>Search_Query__c</fullName>
    <label>Search Query</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>