force-app/main/default/objects/Voice_Service_Reply__c/listViews/All_Voice_Calls.listView-meta.xml
<ListView>
    <fullName>All_Voice_Calls</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Voice_Call__c</columns>
    <columns>Search_Query__c</columns>
    <columns>Answer_1__c</columns>
    <columns>Answer_2__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Voice Calls</label>
</ListView>